# tf-narrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: __init__.py  test_extractor.py  test_main.py  test_renderer.py
tests/fixtures/: plan_destructive.json  plan_hc_cn20can.json  plan_security.json  plan_simple.json
tf_narrator/: __init__.py  extractor.py  main.py  prompts.py  renderer.py
