[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tf-narrator"
version = "1.0.0"
description = "Terraform plan explainer powered by Claude — plain English summaries, risk scores, security observations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["terraform", "iac", "devops", "claude", "anthropic", "ai", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
dependencies = ["anthropic>=0.30.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
tf-narrator = "tf_narrator.main:main"

[project.urls]
Homepage = "https://github.com/AnantKumar17/tf-narrator"
Repository = "https://github.com/AnantKumar17/tf-narrator"
Issues = "https://github.com/AnantKumar17/tf-narrator/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
